replace: {
  path: {
    origin: "cli"
  }
  val: {
    ascii_val: "!! IOS XR Configuration 7.8.1.19I\n"
"!! Last configuration change at Tue Jul 19 04:51:29 2022 by cafyauto\n"
"!\n"
"hostname R3\n"
"username cafyauto\n"
" group root-lr\n"
" group cisco-support\n"
" secret 10 $6$784NN1WFKqYZBN1.$KIQu/2oSAswHI96C93PrZeIkEXAykwZLHGQspixzi74jTB7nc/shH4.8fYxK5umNfANNIKSlE6XArT6rsUVEB.\n"
"!\n"
"grpc\n"
" port 57777\n"
"!\n"
"call-home\n"
" service active\n"
" contact smart-licensing\n"
" profile CiscoTAC-1\n"
"  active\n"
"  destination transport-method email disable\n"
"  destination transport-method http\n"
" !\n"
"!\n"
"interface Loopback0\n"
" ipv4 address 10.10.10.10 255.255.255.255\n"
" ipv6 address ::1/128\n"
"!\n"
"interface MgmtEth0/RP0/CPU0/0\n"
" ipv4 address 5.78.24.101 255.255.0.0\n"
"!\n"
"controller Optics0/0/0/1\n"
" breakout 4x10\n"
"!\n"         
"controller Optics0/0/0/2\n"
" breakout 4x10\n"
"!\n"         
"controller Optics0/0/0/31\n"
" breakout 4x10\n"
"!\n"         
"interface FortyGigE0/0/0/0\n"
" shutdown\n" 
"!\n"         
"interface HundredGigE0/0/0/3\n"
" shutdown\n" 
"!\n"         
"interface HundredGigE0/0/0/4\n"
" shutdown\n" 
"!\n"         
"interface FourHundredGigE0/0/0/5\n"
" shutdown\n" 
"!\n"         
"interface FourHundredGigE0/0/0/6\n"
" shutdown\n" 
"!\n"         
"interface FourHundredGigE0/0/0/7\n"
" shutdown\n" 
"!\n"         
"interface FourHundredGigE0/0/0/8\n"
" shutdown\n" 
"!\n"         
"interface FourHundredGigE0/0/0/9\n"
" shutdown\n" 
"!\n"         
"interface FourHundredGigE0/0/0/10\n"
" shutdown\n" 
"!\n"         
"interface FourHundredGigE0/0/0/11\n"
" shutdown\n" 
"!\n"         
"interface FourHundredGigE0/0/0/12\n"
" shutdown\n" 
"!\n"         
"interface FourHundredGigE0/0/0/13\n"
" shutdown\n" 
"!\n"         
"interface FourHundredGigE0/0/0/14\n"
" shutdown\n" 
"!\n"         
"interface FourHundredGigE0/0/0/15\n"
" shutdown\n" 
"!\n"         
"interface FourHundredGigE0/0/0/16\n"
" shutdown\n" 
"!\n"         
"interface FourHundredGigE0/0/0/17\n"
" shutdown\n" 
"!\n"         
"interface FourHundredGigE0/0/0/18\n"
" shutdown\n" 
"!\n"         
"interface FourHundredGigE0/0/0/19\n"
" shutdown\n" 
"!\n"         
"interface FourHundredGigE0/0/0/20\n"
" shutdown\n" 
"!\n"         
"interface FourHundredGigE0/0/0/21\n"
" shutdown\n" 
"!\n"         
"interface FourHundredGigE0/0/0/22\n"
" shutdown\n" 
"!\n"         
"interface FourHundredGigE0/0/0/23\n"
" shutdown\n" 
"!\n"         
"interface FourHundredGigE0/0/0/24\n"
" shutdown\n" 
"!\n"         
"interface FourHundredGigE0/0/0/25\n"
" shutdown\n" 
"!\n"         
"interface FourHundredGigE0/0/0/26\n"
" shutdown\n" 
"!\n"         
"interface FourHundredGigE0/0/0/27\n"
" shutdown\n" 
"!\n"         
"interface HundredGigE0/0/0/28\n"
" shutdown\n" 
"!\n"         
"interface HundredGigE0/0/0/29\n"
" shutdown\n" 
"!\n"         
"interface HundredGigE0/0/0/30\n"
" shutdown\n" 
"!\n"         
"router static\n"
" address-family ipv4 unicast\n"
"  0.0.0.0/0 5.78.0.1\n"
"  5.0.0.0/8 5.78.0.1\n"
"  5.5.14.197/32 5.78.0.1\n"
"  5.24.27.1/32 5.78.0.1\n"
"  223.255.253.253/32 5.78.0.1\n"
"  223.255.254.0/24 5.78.0.1\n"
"  223.255.254.254/32 5.78.0.1\n"
" !\n"        
"!\n"         
"ssh server v2\n"
"ssh server vrf default\n"
"end\n"
  }
}
